--- a/2022-10-22-ITHS-Uppgift3/MainWindow.xaml
+++ b/2022-10-22-ITHS-Uppgift3/MainWindow.xaml
@@ -7,19 +7,14 @@
         mc:Ignorable="d"
         Title="Servering" Height="550" Width="800">
     <Grid>
+
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="auto"/>
-            <ColumnDefinition Width="auto"/>
             <ColumnDefinition Width="auto"/>
             <ColumnDefinition Width="auto"/>
             <ColumnDefinition Width="auto"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
+        <!--<Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
@@ -28,26 +23,46 @@
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
+        </Grid.RowDefinitions>-->
 
-        <ListBox Name="bokningsBox" Width="300" Grid.Column="1" Grid.Row="1" FontSize="12" Margin="0,0,0,0" Grid.RowSpan="10"></ListBox>
-        <TextBlock Grid.Row="3" Grid.Column="2" Text ="Datum" FontSize="20" Margin="50,0,0,0"/>
-        <TextBlock Grid.Row="3" Grid.Column="3" Text ="Namn" FontSize="20" Margin="50,0,0,0"/>
+        <WrapPanel>
+            <StackPanel Grid.Column="0" Margin="0,10,0,0" Width="300">
+                <ListBox Name="bokningsBox" Height="400" Margin="0,0,0,0"></ListBox>
+                <Button Name="btn_avboka" Content="Avboka" FontSize="20" Height="40" Width="100" HorizontalAlignment="Center"  Margin="0,15,0,0" Click="btn_avboka_Click">
+                    <Button.Style>
+                        <Style>
+                            <Style.Triggers>
+                                <DataTrigger 
+                     Binding ="{Binding ElementName=bokningsBox, Path=SelectedIndex}" 
+                     Value="-1">
+                                    <Setter Property="Button.IsEnabled" Value="false"/>
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Button.Style>
+                </Button>
 
-        <DatePicker Name="datepick" Grid.Row="4" Grid.Column="2" Height="40" Width="200" FontSize="20" Margin="50,0,0,0"/>
-        <TextBox Name="nameBox" Grid.Row="4" Grid.Column="3" Width="150" FontSize="20" Margin="50,0,50,0" />
-        <Button Name="btn_boka" Content="Boka" FontSize="20" Grid.Row="8" Grid.Column="2" Height="50" Margin="50,10,20,0" Click="btn_boka_Click"/>
+            </StackPanel>
+        </WrapPanel>
 
-        <TextBlock Grid.Row="5" Grid.Column="2" Text="Tid" FontSize="20" Margin="50, 50,0,0"/>
-        <TextBlock Grid.Row="5" Grid.Column="3" Text="Bordsnummer" FontSize="20" Margin="50,50,0,0"/>
+        <StackPanel Grid.Column="1" Margin="10,0,10,10">
+            <TextBlock   Text ="Datum" FontSize="20" Margin="0,10,0,0"/>
+            <DatePicker Name="datepick"   Height="40" Width="200" FontSize="20" Margin="0,10,0,0"/>
+            <TextBlock   Text="Tid" FontSize="20" Margin="0,30,0,0"/>
+            <ComboBox Name="tidCombo"  Margin="0,10,0,0" Height="50" FontSize ="20" ItemsSource="{Binding tider}"/>
+            <Button Name="btn_boka" Content="Boka" FontSize="20" Height="40" Margin="0,60,0,0" Click="btn_boka_Click"/>
+            <Button Name = "btn_visaBokningar" Height="40" Content = "Visa bokningar" FontSize="20" Margin="0,30,0,0" Click="btn_visaBokningar_Click_1"/>
+            <Button Name ="btn_readFile" Content="Läs från fil" FontSize="20" Height="40"  Margin="0,50,0,0" Click="btn_readFile_Click"/>
+        </StackPanel>
 
-        <ComboBox Name="tidCombo" Grid.Row="6" Grid.Column="2" Margin="50,10,20,0" Height="50" FontSize ="20" ItemsSource="{Binding tider}"/>
-        <ComboBox Name="bordCombo" Grid.Row="6" Grid.Column="3" Margin="50,10,20,0" Height="50" FontSize ="20" ItemsSource="{Binding bord}"/>
+        <StackPanel Grid.Column="2"   Margin="20,0,0,0">
+            <TextBlock Text ="Namn" FontSize="20" Margin="0,10,0,0"/>
+            <TextBox Name="nameBox" Width="150" FontSize="20" Margin="0,10,0,0" />
+            <TextBlock  Text="Bordsnummer" FontSize="20" Margin="0,40,0,0"/>
+            <ComboBox Name="bordCombo" Margin="0,10,0,0" Height="50" FontSize ="20" ItemsSource="{Binding bord}"/>
+            <Button Name="btn_saveFile" Content= "Spara till fil" FontSize="20" Height="40" Margin="0,220,0,0" Click="btn_saveFile_Click"/>
+        </StackPanel>
 
-        <Button Name="btn_visaBokningar" Content ="Visa Bokningar" FontSize="20" Grid.Row="9" Grid.Column="2" Height="50" Margin="50,25,20,0" Click="btn_visaBokningar_Click"/>
-        <Button Name="btn_avboka" Content="Avboka" FontSize="20" Grid.Row="11" Grid.Column="1" Height="50" Margin="10,25,20,10" Click="btn_avboka_Click"/>
-        <Button Name="btn_saveFile" Content= "Spara till fil" FontSize="20" Grid.Row="10" Grid.Column="3" Height="50" Margin="50,25,20,10" Click="btn_saveFile_Click"/>
-        <Button Name ="btn_readFile" Content="Läs från fil" FontSize="20" Grid.Row="10" Grid.Column="2" Height="50" Margin="50,25,20,10" Click="btn_readFile_Click" />
     </Grid>
 </Window>
     
