--- a/2022-10-22-ITHS-Uppgift3/MainWindow.xaml
+++ b/2022-10-22-ITHS-Uppgift3/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:_2022_10_22_ITHS_Uppgift3"
         mc:Ignorable="d"
         Title="Servering" Height="550" Width="800">
-    <Grid>
+    <Grid VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
 
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto"/>
@@ -25,8 +25,9 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>-->
 
-        <WrapPanel>
-            <StackPanel Grid.Column="0" Margin="0,10,0,0" Width="300">
+        <WrapPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
+            <StackPanel Grid.Column="0" Margin="0,10,0,0" Width="300" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
+                <Label Name="Loading" Height="40"></Label>
                 <ListBox Name="bokningsBox" Height="400" Margin="0,0,0,0"></ListBox>
                 <Button Name="btn_avboka" Content="Avboka" FontSize="20" Height="40" Width="100" HorizontalAlignment="Center"  Margin="0,15,0,0" Click="btn_avboka_Click">
                     <Button.Style>
